# ara-marketplace

./: .env.example  .gitignore  AUDIT.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/agents/: pre-commit-guardian.md
.github/workflows/: build.yml  contracts.yml
app/: index.html  package.json  tailwind.config.js
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: arweave.rs  blob_events.rs  gossip_actor.rs  lib.rs  main.rs  setup.rs  state.rs
app/src-tauri/src/commands/: analytics.rs  collections.rs  content.rs  marketplace.rs  mod.rs  moderation.rs  names.rs  network.rs  seeding.rs  staking.rs  sync.rs  tx.rs  types.rs  wallet.rs
app/src/assets/: AraLogo.tsx
app/src/components/: ActivityTable.tsx  AddressDisplay.tsx  CollectionCard.tsx  CollectionLeaderboard.tsx  ContentTypeFilter.tsx  FeaturedCarousel.tsx  Icons.tsx  Layout.tsx  Navbar.tsx  PriceHistoryChart.tsx  TabPanel.tsx  TopCollectors.tsx  TraitsGrid.tsx  TrendingGrid.tsx
app/src/hooks/: useTheme.ts
app/src/lib/: categories.ts  format.ts  tauri.ts  transactions.ts  types.ts  web3modal.ts
app/src/pages/: CollectionDetail.tsx  Collections.tsx  ContentDetail.tsx  CreatorProfile.tsx  Dashboard.tsx  Library.tsx  Marketplace.tsx  Publish.tsx  TopCreators.tsx  Wallet.tsx
app/src/store/: walletStore.ts
contracts/: .gas-snapshot  foundry.toml  slither.config.json
contracts/script/: Deploy.s.sol  Upgrade.s.sol
contracts/src/: AraCollections.sol  AraContent.sol  AraModeration.sol  AraNameRegistry.sol  AraStaking.sol  ContentRegistry.sol  Marketplace.sol  MockARAToken.sol
contracts/src/interfaces/: IAraToken.sol
contracts/test/: AraCollections.t.sol  AraContent.t.sol  AraModeration.t.sol  AraNameRegistry.t.sol  AraStaking.t.sol  Attacks.t.sol  Collaborators.t.sol  ContentRegistry.t.sol  FuzzEconomics.t.sol  Invariants.t.sol  Marketplace.t.sol  MultiToken.t.sol
contracts/test/helpers/: DeployHelper.sol
contracts/test/integration/: FullFlow.t.sol
crates/ara-chain/: Cargo.toml
crates/ara-chain/src/: collections.rs  content_token.rs  contracts.rs  events.rs  lib.rs  marketplace.rs  moderation.rs  names.rs  provider.rs  registry.rs  staking.rs  token.rs
crates/ara-chain/tests/: calldata.rs  sepolia_e2e.rs  sepolia_integration.rs
crates/ara-core/: Cargo.toml
crates/ara-core/src/: config.rs  storage.rs  types.rs
crates/ara-p2p/: Cargo.toml
crates/ara-p2p/src/: content.rs  discovery.rs  lib.rs  metrics.rs  node.rs  seeding.rs
crates/ara-p2p/tests/: integration.rs
crates/ara-sdk/: Cargo.toml  README.md
crates/ara-sdk/src/: analytics.rs  client.rs  collections.rs  content.rs  lib.rs  marketplace.rs  moderation.rs  names.rs  signer.rs  staking.rs  sync.rs  types.rs
crates/ara-sdk/tests/: e2e_sepolia.rs  sdk_tests.rs
docs/: ARCHITECTURE.md
scripts/: download-ffmpeg.sh  setup-macos.sh  setup-ubuntu.sh  setup-windows.ps1
