[workspace]
resolver = "2"
members = [
    "crates/ara-core",
    "crates/ara-p2p",
    "crates/ara-chain",
    "crates/ara-sdk",
    "app/src-tauri",
]

[workspace.package]
version = "1.0.8"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/ARA-Marketplace/ara-marketplace"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# iroh P2P
iroh = "0.29"
iroh-blobs = "0.29"
iroh-gossip = "0.29"

# Ethereum
alloy = { version = "1", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Networking (socket2 "all" feature needed for netwatch macOS build — Type::RAW)
socket2 = { version = "0.5", features = ["all"] }

# Internal crates
ara-core = { path = "crates/ara-core" }
ara-p2p = { path = "crates/ara-p2p" }
ara-chain = { path = "crates/ara-chain" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
