[package]
name = "ara-marketplace-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ara Marketplace desktop application"

[lib]
name = "ara_marketplace_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ara-core = { workspace = true }
ara-p2p = { workspace = true }
ara-chain = { workspace = true }
alloy = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
bytes = "1"
futures-lite = "2"
opener = "0.7"
infer = "0.16"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
