[package]
name = "ara-marketplace-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ara Marketplace desktop application"

[lib]
name = "ara_marketplace_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ara-core = { workspace = true }
ara-p2p = { workspace = true }
ara-chain = { workspace = true }
alloy = { workspace = true }
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }
bytes = "1"
futures-lite = "2"
opener = "0.7"
infer = "0.16"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
socket2 = { workspace = true }

[features]
devtools = ["tauri/devtools"]
