[package]
name = "ara-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ethereum interaction layer for Ara Marketplace (wraps alloy)"

[dependencies]
ara-core = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
