[package]
name = "ara-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, configuration, and local storage for Ara Marketplace"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
hex = "0.4"
