[package]
name = "ara-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P2P networking layer for Ara Marketplace (wraps iroh)"

[dependencies]
ara-core = { workspace = true }
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-gossip = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
rand = "0.8"
bytes = "1"
futures-lite = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
iroh = { workspace = true, features = ["test-utils"] }
tempfile = "3"
